<resources>
    <string name="app_name">databono</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="Register">Register</string>
    <string name="sign_in">SignIn</string>
    <string name="profile_image">Profile Image</string>
    <string name="username1">username</string>
    <string name="email1">email@email.com</string>


</resources>
